--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,15 +1,12 @@
-.container {
-  padding: 0 2rem;
-}
+@import url('https://fonts.googleapis.com/css2?family=IM+Fell+Great+Primer&family=Inter+Tight&family=Nunito+Sans&display=swap');
 
 .main {
   min-height: 100vh;
   padding: 4rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  display: grid;
+  grid-template-rows:0.5fr 1fr;
+  grid-template-columns: 1fr 2fr;
+  margin-left: 10%;
 }
 
 @media (max-width: 600px) {
@@ -17,5 +14,40 @@
 }
 
 @media (prefers-color-scheme: dark) {
+  .title{
+    align-self: center;
+    font-size: 50px;
+  }
 
+  .me{
+    grid-row: 1/span 3;
+    grid-column: 2/3;
+    align-self: center;
+    justify-self: center;
+  }
+
+  .myPicture{
+    border-radius: 40%;
+  }
+
+  .myDesc{
+    grid-column: 1/2;
+    grid-row: 2/3;
+    font-size: 20px;
+    color: rgb(123, 123, 123);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+  }
+
+  .myDesc>p{
+    font-size: 30px;
+  }
+  
+  .downloadCV{
+    width: 50%;
+    height: 10%;
+    border: 3px solid white;
+    border-radius: 10%;
+  }
 }
