--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter+Tight&family=Nunito+Sans&display=swap');
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Nunito Sans', sans-serif;
 }
 
 a {
@@ -21,6 +22,6 @@ a {
   }
   body {
     color: white;
-    background: black;
+    background-color: rgb(33, 33, 33);
   }
 }
