--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -10,15 +10,6 @@
     justify-content: space-around;
 }
 
-.link{
+.navbar a {
     font-size: large;
-    border-bottom: 2px solid white;
-    transition-property: color border-bottom;
-    transition: ease-in-out;
-    transition-duration: 200ms;
-}
-
-.link:hover{
-    color: rgb(13, 158, 225);
-    border-bottom: 2px solid rgb(13, 158, 225);
 }
