--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -1,6 +1,11 @@
-
+.main {
+    min-height: 100vh;
+    padding: 4rem 0;
+    margin-left: 10%;
+  }
+  
 .contentAbout{
-    width: 75%;
+    width: 60%;
     margin: auto;
 }
 
