--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -3,12 +3,13 @@
     justify-content: space-between;
     padding: 2rem 0;
     border-top: 1px solid #eaeaea;
-    background-color: rgb(75, 75, 75);
+    background-color: #2541B2;
     font-size: large;
+    color: white;
 }
 
 .footer div {
     width: 20%;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
 }
