--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -1,17 +1,32 @@
 .navbar{
     top: 0;
-    background-color: rgb(75, 75, 75);
+    background-color: #2541B2;
     position: fixed;
     width: 100%;
-    z-index: 1;
+    z-index: 2;
 }
 
 .navbar > div {
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 .navbar a {
     font-size: large;
 }
+
+.logo{
+    border: 2px solid black;
+    border-radius: 50%;
+    width: 5%;
+    height: 50px;
+    opacity: 0;
+}
+
+.items{
+    display: flex;
+    justify-content: space-around;
+    width: 50%;
+}
+
