--- a/styles/Technologies.module.css
+++ b/styles/Technologies.module.css
@@ -2,43 +2,19 @@
     min-height: 100vh;
     padding: 6rem 0;
     margin: 0% 15%;
-  }
+}
 
-.technologies{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 1fr);
+.technos{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content:space-around;
 }
 
 .techno{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
+    border: 4px solid blue;
+    background-color: #FFF;
+    margin-bottom: 10px;
+    padding: 2%;
+    border-radius: 10%;
 }
-
-.technoText{
-    position: absolute;
-    opacity: 0;
-    font-size: 20px;
-    text-decoration: underline;
-}
-
-.technoText:hover{
-    cursor: pointer;
-}
-
-.techno .technoText{
-    position: absolute;
-    opacity: 0;
-    transition: .5s ease;
-}
-.techno:hover .imgTechno{
-    filter: blur(10px);
-}
-.techno:hover .technoText{
-    opacity: 1;
-    font-size: 55px;
-    color: #FAFBFF;
-}
-
