--- a/styles/Technologies.module.css
+++ b/styles/Technologies.module.css
@@ -1,20 +1,8 @@
-.main {
-    min-height: 100vh;
-    padding: 6rem 0;
-    margin: 0% 15%;
-}
-
-.technos{
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content:space-around;
-}
 
 .techno{
     border: 4px solid blue;
     background-color: #FFF;
-    margin-bottom: 10px;
     padding: 2%;
     border-radius: 10%;
+    margin: 2%;
 }
