--- a/styles/linksStyle.module.css
+++ b/styles/linksStyle.module.css
@@ -1,10 +1,3 @@
-.link{
-    color: white;
-    border-bottom: 2px solid white;
-    transition-property: color border-bottom;
-    transition: ease-in-out;
-    transition-duration: 200ms;
-}
 
 .linkBlack{
     color: black;
@@ -14,35 +7,8 @@
     transition-duration: 200ms;
 }
 
-.linkIcon{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    color: white;
-    transition-property: color border-bottom;
-    transition: ease-in-out;
-    transition-duration: 200ms;
-}
 
-.linkIconBlack{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    color: black;
-    transition-property: color border-bottom;
-    transition: ease-in-out;
-    transition-duration: 200ms;
-}
-
-.linkIcon:hover, .linkIconBlack:hover{
-    color: #65AFFF;
-}
-
-.linkCards{
-    border-bottom: 2px solid black;
-}
-
-.link:hover, .linkBlack:hover{
+.linkBlack:hover{
     color: #65AFFF;
     border-bottom: 2px solid #65AFFF;
 }
